--- a/src/AppBundle/Resources/public/less/gowood.less
+++ b/src/AppBundle/Resources/public/less/gowood.less
@@ -1,13 +1,11 @@
-body {
-  font-family: Lato;
-}
-
-p {
-  color: blue;
-}
+@import "general.less";
 
 
 header {
+
+  .container {
+    border-bottom: solid #aaa 1px;
+  }
 
   .topbar__content {
     padding: 20px 0px;
@@ -18,20 +16,66 @@ header {
     text-align: center;
   }
 
+  .topbar_menu {
+
+    text-align: center;
+    height: 50px;
+
+    ul {
+
+      height: 50px;
+      display: inline-block;
+      margin-bottom: 0px;
+
+      li {
+        float: left;
+        width: 100px;
+        height: 50px;
+        position: relative;
+        line-height: 50px;
+        list-style-type: none;
+
+        a {
+          display: block;
+          color: #383737;
+          width: 100%;
+          height: 50px;
+          font-weight: bold;
+          font-size: 1.1rem;
+        }
+      }
+    }
+
+  }
+}
+
+.product-list-head {
+  text-align: center;
 }
 
 .product-item-list {
   text-align: center;
 
   h3 {
+    font-size: 24px;
     margin: 20px 0;
+
+    a {
+      color: #383737;
+    }
   }
 
   .item {
     background-color: #fff;
-    border-radius: 5px;
-    border: solid #aaa 1px;
+    border: 1px solid #D9D9D9;
+    box-shadow: 0px 3px 10px #ddd;
     padding: 20px;
     margin: 20px 0;
   }
 }
+
+.product-detail {
+
+}
+
+@import "cart.less";
