--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -23,12 +23,27 @@
                         <div class="topbar__cart"><a href="basket.html" class="btn btn-outline-dark"><i class="fa fa-shopping-cart"></i><span>3 Items in cart</span></a></div>
                     </div>
                 </div>
+                <div class="topbar_menu">
+                    {{ render(controller(
+                    'AppBundle:ShopCatalog:categories'
+                    )) }}
+                </div>
             </div>
         </header>
 
 
+
         <div class="container">
-        {% block body %}{% endblock %}
+            <div class="row">
+                {#<div class="col-md-2">
+                    <div id="sidebar">
+                        {{ render(controller(
+                        'AppBundle:ShopCatalog:categories'
+                        )) }}
+                    </div>
+                </div>#}
+                <div class="col-md-12">{% block body %}{% endblock %}</div>
+            </div>
         </div>
         {% block javascripts %}{% endblock %}
     </body>
