--- a/src/AppBundle/Resources/public/less/cart.less
+++ b/src/AppBundle/Resources/public/less/cart.less
@@ -24,4 +24,13 @@
     }
 
   }
+
+  table.items {
+    border-collapse: collapse;
+    td, th {
+      border: solid #eee 1px;
+      padding: 10px;
+    }
+  }
+
 }
