--- a/src/AppBundle/Resources/public/less/cart.less
+++ b/src/AppBundle/Resources/public/less/cart.less
@@ -33,4 +33,51 @@
     }
   }
 
+  .checkout-item {
+    border: solid #aaa 1px;
+    margin-bottom: 10px;
+    padding: 10px;
+
+    & > div {
+      float: left;
+      width: 80px;
+      height: 100px;
+    }
+
+    .image {
+      width: 80px;
+    }
+
+    .model {
+      width: 80px;
+    }
+
+    .name {
+      width: 200px;
+      span {
+        font-size:75%;
+      }
+    }
+
+    .quantity {
+      width: 50px;
+    }
+
+    .availability {
+      width: 100px;
+    }
+
+    &::after {
+      clear: both;
+      content: " ";
+      display: block;
+    }
+  }
+
+}
+
+.customer {
+  .delivery-form {
+    display: none;
+  }
 }
