--- a/src/AppBundle/Resources/public/less/general.less
+++ b/src/AppBundle/Resources/public/less/general.less
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 body {
-  font-family: Lato;
+  font-family: 'Roboto', sans-serif;
 
   & > .container {
     padding: 20px;
